# stopwatch-qt

./: .gitignore  README.md
src/: CMakeLists.txt  StopWatch.h  main.cpp
